<resources>
    <string name="app_name">FoSer</string>

    <!-- Main activity -->
    <string name="info_state"> Service state: </string>
    <string name="info_service_running">Service IS running...</string>
    <string name="info_service_not_running">Service is NOT running...</string>
    <string name="info_actions"> Service action: </string>
    <string name="button_start">Start</string>
    <string name="button_restart">Restart</string>
    <string name="button_stop">Stop</string>

    <!-- Foreground service -->
    <string name="service_title">FoSer!</string>
    <string name="service_initial_info">Service is just running...</string>
    <!-- Settings Activity Title -->
    <string name="settings_name">Settings</string>

    <!-- Main menu -->
    <string name="settings_item">Settings</string>
    <string name="exit_item">Exit</string>

    <!-- Settings Activity Title -->
    <string name="activity_settings_title">Settings</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>